fixup! dekaf: Update to build in GH actions environment directly

--- a/.github/workflows/dekaf.yaml
+++ b/.github/workflows/dekaf.yaml
@@ -36,7 +36,7 @@ jobs:
           workspaces: |
             crates/dekaf
       - name: build `dekaf`
-        run: cargo build --release -p dekaf
+        run: cargo build --release -p dekaf && cp target/release/dekaf ./dekaf-bin
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
