--- a/crates/dekaf/Cargo.toml
+++ b/crates/dekaf/Cargo.toml
@@ -11,9 +11,17 @@ license.workspace = true
 
 [dependencies]
 aes-siv = { workspace = true }
+avro = { path = "../avro" }
+doc = { path = "../doc" }
+flowctl = { path = "../flowctl" }
+gazette = { path = "../gazette" }
+labels = { path = "../labels" }
+ops = { path = "../ops" }
+proto-flow = { path = "../proto-flow" }
+proto-gazette = { path = "../proto-gazette" }
+simd-doc = { path = "../simd-doc" }
 
 anyhow = { workspace = true }
-avro = { path = "../avro" }
 axum = { workspace = true }
 axum-extra = { workspace = true }
 axum-server = { workspace = true }
@@ -21,27 +29,20 @@ base64 = { workspace = true }
 bytes = { workspace = true }
 # TODO(jshearer): Upgrade every other usage of clap to v4 and change this to:
 # clap = { workspace = true }
-clap = { package = "clap", version = "4", features = ["derive", "env"] }
+clap = { workspace = true }
 crypto-common = { workspace = true }
 deadpool = { workspace = true }
-doc = { path = "../doc" }
-flowctl = { path = "../flowctl" }
 futures = { workspace = true }
-gazette = { path = "../gazette" }
 hex = { workspace = true }
 hexdump = { workspace = true }
 itertools = { workspace = true }
 kafka-protocol = { workspace = true }
-labels = { path = "../labels" }
 md5 = { workspace = true }
 metrics = { workspace = true }
 metrics-prometheus = { workspace = true }
-ops = { path = "../ops" }
 percent-encoding = { workspace = true }
 postgrest = { workspace = true }
 prometheus = { workspace = true }
-proto-flow = { path = "../proto-flow" }
-proto-gazette = { path = "../proto-gazette" }
 regex = { workspace = true }
 rsasl = { workspace = true }
 rustls = { workspace = true }
@@ -49,7 +50,6 @@ rustls-native-certs = { workspace = true }
 rustls-pemfile = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
-simd-doc = { path = "../simd-doc" }
 socket2 = { workspace = true }
 time = { workspace = true }
 tokio = { workspace = true }
