temporarily remove `dekaf` dependency on `flowctl`

--- a/crates/agent/Cargo.toml
+++ b/crates/agent/Cargo.toml
@@ -15,6 +15,7 @@ activate = { path = "../activate" }
 agent-sql = { path = "../agent-sql" }
 allocator = { path = "../allocator" }
 async-process = { path = "../async-process" }
+dekaf = { path = "../dekaf" }
 build = { path = "../build" }
 doc = { path = "../doc" }
 gazette = { path = "../gazette" }
