--- a/Cargo.toml
+++ b/Cargo.toml
@@ -86,7 +86,7 @@ lz4_flex = "0.11.0"
 mime = "0.3"
 memchr = "2.5"
 metrics = "0.23.0"
-metrics-prometheus = "0.7.0"
+metrics-exporter-prometheus = "0.15.3"
 prometheus = "0.13.4"
 md5 = "0.7.0"
 num-bigint = "0.4"
