--- a/crates/dekaf/Cargo.toml
+++ b/crates/dekaf/Cargo.toml
@@ -24,6 +24,7 @@ proto-gazette = { path = "../proto-gazette" }
 simd-doc = { path = "../simd-doc" }
 
 anyhow = { workspace = true }
+console-subscriber = { workspace = true }
 axum = { workspace = true }
 axum-extra = { workspace = true }
 axum-server = { workspace = true }
