--- a/crates/agent/Cargo.toml
+++ b/crates/agent/Cargo.toml
@@ -49,6 +49,7 @@ lazy_static = { workspace = true }
 rand = { workspace = true }
 regex = { workspace = true }
 reqwest = { workspace = true }
+rustls = { workspace = true }
 schemars = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
