dekaf: fix build

--- a/.github/workflows/dekaf.yaml
+++ b/.github/workflows/dekaf.yaml
@@ -14,8 +14,8 @@ on:
       - "Cargo.lock"
 
 jobs:
-  build-and-test:
-    runs-on: ubuntu-latest
+  build-dekaf:
+    runs-on: ubuntu-24.04
 
     steps:
       - uses: actions/checkout@v2
