flowctl: initialize rustls crypto provider
Add the required initialization for the `rustls` crypto provider to the
beginning of the agent main function, so that TLS will work again.

--- a/crates/flowctl/Cargo.toml
+++ b/crates/flowctl/Cargo.toml
@@ -53,6 +53,7 @@ postgrest = { workspace = true }
 prost = { workspace = true }
 reqwest = { workspace = true }
 rusqlite = { workspace = true }
+rustls = { workspace = true }
 rustyline = { workspace = true }
 serde = { workspace = true }
 serde-transcode = { workspace = true }
