flowctl: build using clang instead of gcc
Switches to using clang instead of GCC in order to work around a
compilation error in one of our dependencies, which is due to a bug in
GCC 9. See:
https://github.com/rustls/rustls/issues/1967

--- a/.github/workflows/flowctl-release.yaml
+++ b/.github/workflows/flowctl-release.yaml
@@ -33,6 +33,9 @@ jobs:
       # Linux build steps:
       - name: Build Linux
         if: matrix.config.os == 'ubuntu-20.04'
+        env:
+          CC: clang
+          CXX: clang++
         run: |-
           cargo build -p flowctl --release && mv target/release/flowctl ${ASSET_NAME}
 
