--- a/crates/validation/tests/model.yaml
+++ b/crates/validation/tests/model.yaml
@@ -210,7 +210,7 @@ test://example/int-halve:
         Extra: /extra
       journals:
         fragments:
-          length: 11223344
+          length: 100
           flushInterval: 15m
       derive:
         using:
