agent: add diagnostics for db connections
- Adds periodic logging of connection pool size
- Sets the application name to the k8s pod name, to better correlate
  with pg_stat_activity
- Sets a connection acquisition timeout
- Configures logging of slow statements
- Pings the connection when returning it to the pool, so that we can
  detect and remove bad connections

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -81,6 +81,7 @@ librocksdb-sys = { version = "0.16.0", default-features = false, features = [
     "snappy",
     "rtti",
 ] }
+log = "0.4" # only used to configure logging of dependencies
 lz4 = "1.24.0"
 lz4_flex = "0.11.0"
 mime = "0.3"
