gazette: make Router synchronous and lazy, and clear Read header
Simplify Router by starting a Channel immediately, and instead emphasize
RPC timeouts rather than connection timeouts.

There are a variety of conditions where connection timeouts don't really
work, such as when a server has bound its port but is not actively
serving it. Currently this causes tonic to block indefinitely.

Also, Channel embeds a reconnection behavior if the transport is broken,
so it's already the case that Channels are connecting in the background
and we should expect to see corresponding delays.

So, have a single behavior for Channels: they start immediately but may
have connection delay in the background.

- Back out connection-readiness route selection in favor of random balancing.
- Distinguish local vs non-local Channels: in the future, we should use this
  to implement selective compression over non-local Channels.

Also, upon an error a Read stream must clear its ReadRequest Header.
The rationale is that the current Header could point to a Gazette broker
which has permanently stopped, and connections will time out repeatedly.
Clearing the Header causes route discovery to restart using
the base service address.

--- a/crates/gazette/Cargo.toml
+++ b/crates/gazette/Cargo.toml
@@ -20,6 +20,7 @@ futures = { workspace = true }
 futures-core = { workspace = true }
 hyper-util = { workspace = true }
 jsonwebtoken = { workspace = true }
+rand = { workspace = true }
 reqwest = { workspace = true }
 thiserror = { workspace = true }
 tokio = { workspace = true }
