--- a/crates/dekaf/Cargo.toml
+++ b/crates/dekaf/Cargo.toml
@@ -31,6 +31,7 @@ base64 = { workspace = true }
 bytes = { workspace = true }
 clap = { workspace = true }
 crypto-common = { workspace = true }
+tonic = { workspace = true }
 deadpool = { workspace = true }
 futures = { workspace = true }
 hex = { workspace = true }
