data-plane-controller: controller for managing data-plane life cycles
The controller uses the recent `automations` crate to monitor structured
changes to a bound data_planes and drive the data-plane to convergence.

It's modeled as a CI/CD pipeline, where an indicated branch of our
dry-dock repo (containing Pulumi and Ansible infrastructure) is deployed
for the given data-plane.

The controller performs the full lifecycle required for rolling updates:

- `pulumi up` to create new resources or respond to replacements
- Awaiting DNS propagation
- Running the Ansible playbook to provision instances
- Running `pulumi up` to reflect readiness of started instances
- Awaiting DNS propagation (again)

It also periodically refreshes a stack from remote providers to detect
changed or deleted resources, such as EC2 instance replacements, and
responds accordingly to heal the infrastructure.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,6 +66,7 @@ humantime = "2.1"
 humantime-serde = "1.1"
 itertools = "0.10"
 indexmap = { version = "1.8", features = ["serde"] }
+ipnetwork = { version = "0.19", features = ["serde"] }
 iri-string = "0.6.0"
 jemallocator = { version = "0.3", features = ["profiling"] }
 jemalloc-ctl = "0.3"
@@ -141,6 +142,7 @@ strum_macros = "0.24"
 superslice = "1.0"
 sqlx = { version = "0.6", features = [
     "chrono",
+    "ipnetwork",
     "json",
     "macros",
     "postgres",
