agent: implement auto-discovers in controllers
Fixes #1674 and #1585
Implements auto-discovers as part of capture controllers. This gives
auto-discovers their own status, and generally makes it easier to debug
auto-discover issues and see what's happening.

In order to make this work, discovers were significalntly refactored, and given
a similar treatment to publications and evolutions.  It is now possible to
discover into an in-memory `tables::DraftCatalog`, which will be used as the
merge base.  Discovers now return a structured summary of modifications,
similar to publications and evolutions. This summary is stored as part of the
auto-discover status.

The discover merge logic was updated to always add all discovered bindings,
regardless of the `update_only` flag. If `update_only` is true, then the new
bindings will be disabled.

--- a/crates/agent/Cargo.toml
+++ b/crates/agent/Cargo.toml
@@ -42,6 +42,7 @@ clap = { workspace = true }
 colored_json = { workspace = true }       # Used to render ops::Logs for UI.
 derivative = { workspace = true }
 futures = { workspace = true }
+humantime = { workspace = true }
 humantime-serde = { workspace = true }
 itertools = { workspace = true }
 jsonwebtoken = { workspace = true }
