--- a/Cargo.toml
+++ b/Cargo.toml
@@ -143,6 +143,7 @@ sqlx = { version = "0.6", features = [
     "ipnetwork",
     "json",
     "macros",
+    "offline",
     "postgres",
     "runtime-tokio-native-tls",
     "uuid",
