--- a/crates/dekaf/Cargo.toml
+++ b/crates/dekaf/Cargo.toml
@@ -21,8 +21,9 @@ models = { path = "../models" }
 ops = { path = "../ops" }
 proto-flow = { path = "../proto-flow" }
 proto-gazette = { path = "../proto-gazette" }
-unseal = { path = "../unseal" }
+runtime = { path = "../runtime" }
 simd-doc = { path = "../simd-doc" }
+unseal = { path = "../unseal" }
 
 aes-siv = { workspace = true }
 anyhow = { workspace = true }
@@ -40,6 +41,7 @@ hex = { workspace = true }
 hexdump = { workspace = true }
 humantime = { workspace = true }
 itertools = { workspace = true }
+jsonwebtoken = { workspace = true }
 kafka-protocol = { workspace = true }
 lazy_static = { workspace = true }
 lz4_flex = { workspace = true }
