--- a/crates/flow-client/Cargo.toml
+++ b/crates/flow-client/Cargo.toml
@@ -10,6 +10,8 @@ license.workspace = true
 
 [dependencies]
 gazette = { path = "../gazette" }
+proto-gazette = { path = "../proto-gazette" }
+proto-flow = { path = "../proto-flow" }
 models = { path = "../models" }
 ops = { path = "../ops" }
 proto-flow = { path = "../proto-flow" }
@@ -22,6 +24,7 @@ jsonwebtoken = { workspace = true }
 lazy_static = { workspace = true }
 page-turner = { workspace = true }
 postgrest = { workspace = true }
+jsonwebtoken = { workspace = true }
 reqwest = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
