--- a/crates/flow-client/Cargo.toml
+++ b/crates/flow-client/Cargo.toml
@@ -12,10 +12,13 @@ license.workspace = true
 gazette = { path = "../gazette" }
 models = { path = "../models" }
 ops = { path = "../ops" }
+proto-flow = { path = "../proto-flow" }
+proto-gazette = { path = "../proto-gazette" }
 
 anyhow = { workspace = true }
 base64 = { workspace = true }
 futures = { workspace = true }
+jsonwebtoken = { workspace = true }
 lazy_static = { workspace = true }
 page-turner = { workspace = true }
 postgrest = { workspace = true }
