--- a/crates/agent/Cargo.toml
+++ b/crates/agent/Cargo.toml
@@ -31,6 +31,7 @@ sources = { path = "../sources" }
 tables = { path = "../tables", features = ["persist"] }
 validation = { path = "../validation" }
 
+aide = { workspace = true }
 anyhow = { workspace = true }
 async-trait = { workspace = true }
 axum = { workspace = true }
