--- a/.github/workflows/derive-typescript.yaml
+++ b/.github/workflows/derive-typescript.yaml
@@ -25,8 +25,7 @@ jobs:
       - run: sudo apt install -y musl-tools
 
       - name: Login to GitHub container registry
-        # TODO(johnny): Uncomment once merged.
-        # if: ${{ github.ref == 'refs/heads/master' }}
+        if: ${{ github.ref == 'refs/heads/master' }}
         run: |
           echo "${{ secrets.GITHUB_TOKEN }}" | \
             docker login --username ${{ github.actor }} --password-stdin ghcr.io
