dekaf: rebuild on protocol changes
Dekaf depends on multiple protocol crates including `proto-flow` and
`proto-gazette`, so it should be rebuilt when one of those changes. As a
simplification, this modification will run the dekaf CI whenever any `proto-***`
crate changes.

Future work may consider building dekaf like we do other rust binaries and
packaging it similarly to reactor or agent.

--- a/.github/workflows/dekaf.yaml
+++ b/.github/workflows/dekaf.yaml
@@ -5,6 +5,7 @@ on:
     branches: [master]
     paths:
       - "crates/dekaf/**"
+      - "crates/proto-**"
       - "Cargo.lock"
   pull_request:
     branches: [master]
