--- a/crates/dekaf/Cargo.toml
+++ b/crates/dekaf/Cargo.toml
@@ -10,24 +10,25 @@ repository.workspace = true
 license.workspace = true
 
 [dependencies]
-aes-siv = { workspace = true }
 allocator = { path = "../allocator" }
 avro = { path = "../avro" }
 doc = { path = "../doc" }
 flow-client = { path = "../flow-client" }
 gazette = { path = "../gazette" }
+json = { path = "../json" }
 labels = { path = "../labels" }
 models = { path = "../models" }
 ops = { path = "../ops" }
 proto-flow = { path = "../proto-flow" }
 proto-gazette = { path = "../proto-gazette" }
 simd-doc = { path = "../simd-doc" }
+
+aes-siv = { workspace = true }
 anyhow = { workspace = true }
 axum = { workspace = true }
 axum-extra = { workspace = true }
 axum-server = { workspace = true }
 base64 = { workspace = true }
-humantime = { workspace = true }
 bumpalo = { workspace = true }
 bytes = { workspace = true }
 clap = { workspace = true }
@@ -36,6 +37,7 @@ deadpool = { workspace = true }
 futures = { workspace = true }
 hex = { workspace = true }
 hexdump = { workspace = true }
+humantime = { workspace = true }
 itertools = { workspace = true }
 kafka-protocol = { workspace = true }
 lazy_static = { workspace = true }
