agent: add CONTROL_PLANE_JWT_SECRET to agent-api deployment
This is required now, and was missing from the cloud-run deployment.

--- a/.github/workflows/deploy-agent-api.yaml
+++ b/.github/workflows/deploy-agent-api.yaml
@@ -53,6 +53,7 @@ jobs:
           secrets: |-
             PGPASSWORD=POSTGRES_PASSWORD:latest
             CONTROL_PLANE_DB_CA_CERT=CONTROL_PLANE_DB_CA_CERT:latest
+            CONTROL_PLANE_JWT_SECRET=CONTROL_PLANE_JWT_SECRET:latest
 
           env_vars_update_strategy: overwrite
           secrets_update_strategy: overwrite
