--- a/crates/runtime/Cargo.toml
+++ b/crates/runtime/Cargo.toml
@@ -35,6 +35,7 @@ proto-grpc = { path = "../proto-grpc", features = [
 ] }
 simd-doc = { path = "../simd-doc" }
 tuple = { path = "../tuple" }
+unseal = { path = "../unseal" }
 
 anyhow = { workspace = true }
 bytes = { workspace = true }
