dekaf: Implement `tracing` layer to capture messages logged inside of a Session and write them to the correct ops logs journal
Also support filtering logs by the requested shard log level

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -198,6 +198,7 @@ tracing-subscriber = { version = "0.3", features = [
     "env-filter",
     "fmt",
 ] }
+tracing-record-hierarchical = "0.1.1"
 rustls-native-certs = "0.7.2"
 zeroize = "1.6"
 
