--- a/crates/dekaf/Cargo.toml
+++ b/crates/dekaf/Cargo.toml
@@ -23,12 +23,12 @@ models = { path = "../models" }
 ops = { path = "../ops" }
 proto-flow = { path = "../proto-flow" }
 proto-gazette = { path = "../proto-gazette" }
-runtime = { path = "../runtime" }
 simd-doc = { path = "../simd-doc" }
 unseal = { path = "../unseal" }
 
 aes-siv = { workspace = true }
 anyhow = { workspace = true }
+async-trait = { workspace = true }
 axum = { workspace = true }
 axum-extra = { workspace = true }
 axum-server = { workspace = true }
@@ -67,6 +67,8 @@ time = { workspace = true }
 tokio = { workspace = true }
 tokio-rustls = { workspace = true }
 tokio-util = { workspace = true }
+tokio-stream = { workspace = true }
+tracing-record-hierarchical = { workspace = true }
 tower-http = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
@@ -74,3 +76,16 @@ typestate = { workspace = true }
 url = { workspace = true }
 webpki = { workspace = true }
 apache-avro = { workspace = true }
+
+[dev-dependencies]
+async-process = { path = "../async-process" }
+flowctl = { path = "../flowctl" }
+locate-bin = { path = "../locate-bin" }
+
+apache-avro = { workspace = true }
+insta = { workspace = true }
+rdkafka = { workspace = true }
+reqwest = { workspace = true }
+schema_registry_converter = { workspace = true }
+tempfile = { workspace = true }
+tracing-test = { workspace = true }
