gazette: Implement `journal::append`
This implements low-level appends to Gazette. It takes a function that generates a stream of `Bytes`, and attempts to drive an append RPC. If the RPC errors, you can retry by re-polling after recieving an Error.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -186,6 +186,7 @@ tokio = { version = "1", features = [
     "time",
 ] }
 tokio-util = { version = "0.7", features = ["io", "compat", "rt"] }
+tokio-stream = { version = "0.1.17" }
 tonic = { version = "0.12", features = ["tls", "tls-roots"] }
 hyper-util = "0.1"
 tower = { version = "0.5", features = ["util"] }
