--- a/crates/gazette/Cargo.toml
+++ b/crates/gazette/Cargo.toml
@@ -12,7 +12,10 @@ license.workspace = true
 coroutines = { path = "../coroutines" }
 ops = { path = "../ops" }
 proto-gazette = { path = "../proto-gazette" }
-proto-grpc = { path = "../proto-grpc", features = ["broker_client", "consumer_client"] }
+proto-grpc = { path = "../proto-grpc", features = [
+    "broker_client",
+    "consumer_client",
+] }
 
 async-compression = { workspace = true }
 bytes = { workspace = true }
