agent: start using automations for controllers
Switches controllers over to run using the new `automations` crate.  This
includes all of the functional code changes, but leaves the integration tests
to be updated in a separate commit. Controllers themselves shouldn't have any
changes to behavior.

The basic idea is to treat the `controller_jobs` table as just status
information, which gets updated by the automations task for each live spec.
There is a separation between the status of the automation (in
`internal.tasks`) and the status of the live spec and controller (in
`controller_jobs`). Controller errors will show up in `controller_jobs`, but
the automation task will still be considered successful. The name
`controller_jobs` is now a bit unfortunate, and `controller_status` would be a
much better fit, but I felt that it would be too complex to try to rename it as
part of this initial rollout.

Since automations supports sending messages to controllers, I send a message to
the controller each time it's triggered. We don't currently use these messages
for anything, but they get logged at the debug level, and it's been helpful for
debugging to see them in the database.

The migrations support running both old and new agent versions side-by-side
during the roll-out. This wasn't really a requirement, but it ended up working
anyway. The main requirement was that we could roll back the deployment if we
discover a problem, and it ended up being easy to support both. The main
mechanism for this is that controller automation tasks will return an error if
the corresponding `live_specs` row has a `controller_next_run` value set. This
ensures that they don't contend with the old handlers-based controllers.  The
plan is to use a separate PR and deployment to remove the old
`controller_next_run` column after it's no longer needed.

--- a/crates/agent/Cargo.toml
+++ b/crates/agent/Cargo.toml
@@ -14,6 +14,7 @@ activate = { path = "../activate" }
 agent-sql = { path = "../agent-sql" }
 allocator = { path = "../allocator" }
 async-process = { path = "../async-process" }
+automations = { path = "../automations" }
 build = { path = "../build" }
 dekaf = { path = "../dekaf" }
 doc = { path = "../doc" }
