crates/activate & go/shuffle: support for journal suspension
Activation is refactored to preserve and pass-through JournalSpec::Suspend
fields when applying control-plane activations.

The prior dekaf-specific activation logic is moved to `agent`, and
simplified to use no initial shard splits for dekaf tasks.

Activation is also updated to avoid creating data-plane resources for
tasks which are created into a disabled state.

The shuffled read machinery is updated to be aware of suspended
journals: to drain reads when they become suspended, and to not read
them again until they re-activate.

--- a/crates/activate/src/test.flow.yaml
+++ b/crates/activate/src/test.flow.yaml
@@ -46,3 +46,17 @@ collections:
         # Expect this is reflected in shard specs.
         maxTxnDuration: 60s
         hotStandbys: 3
+
+  example/disabled:
+    schema: *schema
+    key: [/a_key]
+    derive:
+      using:
+        sqlite: {}
+      transforms:
+        - name: widget
+          source: example/collection
+          shuffle: any
+          lambda: select JSON(flow_document)
+      shards:
+        disable: true
