--- a/crates/flowctl/Cargo.toml
+++ b/crates/flowctl/Cargo.toml
@@ -51,6 +51,7 @@ pbjson-types = { workspace = true }
 portpicker = { workspace = true }
 postgrest = { workspace = true }
 prost = { workspace = true }
+rand = { workspace = true }
 reqwest = { workspace = true }
 rusqlite = { workspace = true }
 rustls = { workspace = true }
