validation: remove unchanged projections which are dropped from schema
Today, an explicit collection projection can block the update of a
collection schema, if that schema update drops the projected location.

This isn't desireable because it adds friction to an interactive or
background discovery. The purpose of these errors is to help users catch
mistakes when creating **new** projections. If an existing projection
becomes invalid through a schema change, then we shouldn't error.

Instead, remove an explicit projection that's no longer schematized,
and treat an explicit but impossible projection identically to its
implicit projection counterpart.

--- a/crates/validation/tests/transitions.yaml
+++ b/crates/validation/tests/transitions.yaml
@@ -7,7 +7,13 @@ test://example/catalog.yaml:
         properties:
           f_one: { type: integer }
           f_two: { type: string }
+          f_x: false
         required: [f_one, f_two]
+      projections:
+        F1: /f_one
+        F2: /f_two
+        FX: /f_x
+        FY: /f_y
       expectPubId: "10:10:10:10:10:10:10:10"
 
     the/derivation:
@@ -81,6 +87,10 @@ driver:
       controlId: "11:11:11:11:11:11:11:02"
       dataPlaneId: "12:12:12:12:12:12:12:02"
       derivation: false
+      projections:
+        F2: /f_two
+        FX: /f_x
+        FY: /f_y
     the/derivation:
       key: [/d_one]
       lastPubId: "10:10:10:10:10:10:10:10"
