build: don't enable combine feature by default for doc crate
Making this a default feature causes it to be enabled when building the
`flow-web` crate, even with `default-features = false`.  So removing combine
from default features and making other dependents explicitly enable it, to try
to get flow-web building.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -84,7 +84,7 @@ js-sys = "0.3.60"
 kafka-protocol = "0.13.0"
 lazy_static = "1.4"
 libc = "0.2"
-librocksdb-sys = { version = "*", default-features = false, features = [
+librocksdb-sys = { version = "0.16.0", default-features = false, features = [
     "snappy",
     "rtti",
 ] }
