--- a/crates/doc/Cargo.toml
+++ b/crates/doc/Cargo.toml
@@ -49,6 +49,6 @@ serde_json = { workspace = true }
 serde_yaml = { workspace = true }
 
 [features]
-default = ["combine"]
+default = []
 
 combine = ["lz4"]
