--- a/crates/dekaf/Cargo.toml
+++ b/crates/dekaf/Cargo.toml
@@ -68,6 +68,7 @@ tokio = { workspace = true }
 tokio-rustls = { workspace = true }
 tokio-util = { workspace = true }
 tokio-stream = { workspace = true }
+tonic = { workspace = true }
 tracing-record-hierarchical = { workspace = true }
 tower-http = { workspace = true }
 tracing = { workspace = true }
