--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,12 +6,11 @@ on:
   push:
     branches: [master]
     paths-ignore:
-      - 'site/**'
+      - "site/**"
   pull_request:
     branches: [master]
     paths-ignore:
-      - 'site/**'
-
+      - "site/**"
 
 env:
   CARGO_TERM_COLOR: always
@@ -46,7 +45,7 @@ jobs:
       - name: Google Cloud Auth
         uses: google-github-actions/auth@v2
         with:
-          credentials_json: '${{ secrets.GCP_SA_KEY }}'
+          credentials_json: "${{ secrets.GCP_SA_KEY }}"
 
       - name: Set up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v2
@@ -162,7 +161,7 @@ jobs:
           go-version: "1.23"
 
       - name: Cache/Restore Go dependencies.
-        uses: actions/cache@v2
+        uses: actions/cache@v4
         with:
           path: ~/go/pkg/mod
           key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
@@ -173,7 +172,7 @@ jobs:
       - name: Google Cloud Auth
         uses: google-github-actions/auth@v2
         with:
-          credentials_json: '${{ secrets.GCP_SA_KEY }}'
+          credentials_json: "${{ secrets.GCP_SA_KEY }}"
 
       - name: Set up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v2
