gazette: Add `journal::Client::append_stream`
`Client::append` is fine if you only have a single buffer to append, but if you want to append an ongoing stream of messages in order, you fundamentally need somewhere to buffer your messages until they can be included in an append request.

--- a/crates/gazette/Cargo.toml
+++ b/crates/gazette/Cargo.toml
@@ -18,6 +18,7 @@ proto-grpc = { path = "../proto-grpc", features = [
 ] }
 
 async-compression = { workspace = true }
+async-trait = { workspace = true }
 bytes = { workspace = true }
 futures = { workspace = true }
 futures-core = { workspace = true }
