--- a/crates/dekaf/Cargo.toml
+++ b/crates/dekaf/Cargo.toml
@@ -70,6 +70,10 @@ tokio-util = { workspace = true }
 tokio-stream = { workspace = true }
 tonic = { workspace = true }
 tracing-record-hierarchical = { workspace = true }
+aws-config = { workspace = true }
+aws-types = { workspace = true }
+aws-credential-types = { workspace = true }
+aws-msk-iam-sasl-signer = { workspace = true }
 tower-http = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
