ops: introduce events derivations, connectorStatus, and shardFailures
Introduces new `/events` collections to the ops catalog, which are intended as
a general mechanism for notifying the control plane of various task-related
activities in the data plane. There is both an L1 and an L2 rollup, just like
for other ops collections.  The events collections are logically partitioned on
the task type and event type, to allow different types of handling for
different events.

An event is nothing more than a log that has a `fields.eventType` property with
a string value saying what type of event it is. Thus all events conform the
logs schema. The ops catalog itself has no opinions on what or how many event
types there are, or on the interpretation of any `fields` other than
`eventType`.

Two specific event types are also introduced here: `connectorStatus` and `shardFailure`.

`connectorStatus` events are materialized into the `connector_status` table,
keyed on the task name. The planned use case is for connectors to set the
`message` to some markdown-formatted text, and to display that as part of the
task status in the UI. If there are multiple different task shards, then only
the most recently emitted status will be shown here.  There are no reduction
annotations, so subsequent `connectorStatus` events will completely overwrite
the previous ones. This isn't for any principled reasons, but rather we just
don't have a use case for merging event fields at this time. We can always add
reductions later if we want.

The `shardFailure` events are materialized into the `shard_failures` table
using delta updates.  Inserts into this table will trigger a run of the
corresponding live specs controller, and the plan is to have controllers
respond by re-starting failed task shards. Controllers will also perform
cleanups of the `shard_failures`, though they're not able to handle that is
_all_ cases so there's also a cron job to catch any stragglers.  The main case
where controllers can't 

--- a/ops-catalog/data-plane-template.flow.yaml
+++ b/ops-catalog/data-plane-template.flow.yaml
@@ -24,6 +24,29 @@ collections:
         location: /shard/name
         partition: true
 
+  ops/rollups/L1/BASE_NAME/events:
+    schema: events.schema.yaml
+    key: [/fields/eventTarget, /eventType]
+    projections:
+      event_type:
+        location: /fields/eventType
+        partition: true
+    derive:
+      using:
+        sqlite: {}
+      transforms:
+        - name: logs
+          source: ops/tasks/BASE_NAME/logs
+          shuffle: any
+          # Important: only outputs documents that validate against the schema.
+          lambda: |
+            select json($flow_document)
+              where json_type($fields, '$.eventType') = 'text'
+              and json_type($fields, '$.eventTarget') = 'text'
+              and json_type($fields, '$.error') in ('null', 'text');
+      shards:
+        minTxnDuration: 5s
+
   ops/rollups/L1/BASE_NAME/inferred-schemas:
     schema: inferred-schemas.schema.yaml
     key: [/collection_name]
