--- a/ops-catalog/reporting-L2-template.flow.yaml
+++ b/ops-catalog/reporting-L2-template.flow.yaml
@@ -2,6 +2,33 @@
 #  flowctl raw bundle --source ops-catalog/reporting-L2-template.flow.yaml  > ops-catalog/reporting-L2-template.bundle.json
 
 collections:
+  ops.us-central1.v1/events/L2:
+    schema: logs.schema.yaml
+    key: [/shard/name, /shard/keyBegin, /shard/rClockBegin]
+    projections:
+      kind:
+        location: /shard/kind
+        partition: true
+      event_type:
+        location: /fields/eventType
+        partition: true
+      catalog_type: /shard/kind
+      catalog_name: /shard/name
+      shard_key_begin: /shard/keyBegin
+      shard_r_clock_begin: /shard/rClockBegin
+      build: /shard/build
+      # Error is expected to be present for shard failure events, though other
+      # types of events may also communicate errors using this field.
+      error: /fields/error
+    derive:
+      using:
+        sqlite: {}
+      transforms:
+        - name: logs
+          source: ops/rollups/L1/BASE_NAME/events
+          shuffle: any
+          lambda: |
+            select json($flow_document);
 
   ops.us-central1.v1/inferred-schemas/L2:
     schema: inferred-schemas.schema.yaml
