--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ async-compression = { version = "0.3", features = [
 async-stripe = { version = "0.37", features = ["runtime-tokio-hyper"] }
 async-trait = "0.1"
 atty = "0.2"
+arc-swap = { version = "1.7.1" }
 apache-avro = { version = "0.17.0", features = ["snappy"] }
 
 base64 = "0.13"
