data-plane-controller: add releases and rollouts
A Rollout is an attachement of a Deployment which performs incremental,
stepped updates of its `desired` replicas towards a `target`.

Rollouts are stepped atomically across all Deployments of a data-plane
model, which means we can coordinate a release by creating appropriate
Rollouts (scaling one deployment down, and another up; "surge" vs
"replace").

Also introduce a data-plane Release and a corresponding SQL table to
hold releases. The data-plane-controller will look for any active release
which matches a current Deployment, and if found will create a new
Deployment with Rollout attachments to enact it.

--- a/crates/data-plane-controller/Cargo.toml
+++ b/crates/data-plane-controller/Cargo.toml
@@ -32,3 +32,6 @@ tokio = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 url = { workspace = true }
+
+[dev-dependencies]
+insta = { workspace = true }
