ops-catalog: pre-aggregate stats by prefix
Updates the ops catalog to emit each stats document separately for each
prefix path component. For example, a stats document that's emitted for
the task `a/b/c/d` would have those same stats emitted for all of the following catalog names:

- a/
- a/b/
- a/b/c/
- a/b/c/d

The `catalog_stats` tables are altered to permit the trailing `/`, so that we
can differentiate stats for prefixes and tasks. The change to the column type
required dropping and re-creating some views. Also included are some updates to
various views and functions to account for the extra prefix stats being in the
`catalog_stats` tables.

--- a/ops-catalog/local-view.flow.yaml
+++ b/ops-catalog/local-view.flow.yaml
@@ -5,7 +5,7 @@ materializations:
   ops.us-central1.v1/stats-view:
     endpoint:
       connector:
-        image: ghcr.io/estuary/materialize-postgres:dev
+        image: ghcr.io/estuary/materialize-postgres:local
         config: local-endpoint.sops.yaml
 
     bindings:
